DeviceSettings: Hardware keys option
Change-Id: I4bf1bd90b41c520890ee81cb6d9fc273f05deb05

--- a/DeviceSettings/res/values/config.xml
+++ b/DeviceSettings/res/values/config.xml
@@ -44,4 +44,8 @@
     <string name="fastcharge_enabled_value">1</string>
     <string name="fastcharge_disabled_value">0</string>
 
+    <string name="hwkeys_sysfs_file">"/proc/touchpanel/keypad_enable"</string>
+    <string name="hwkeys_enabled_value">1</string>
+    <string name="hwkeys_disabled_value">0</string>
+
 </resources>
